tests/golden/Nonterminal.lean.expected
tests/golden/Nonterminal.lean:17:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/golden/Nonterminal.lean:26:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/golden/Nonterminal.lean:26:2: warning: aesop: at least one safe multi-rule was applied. Only the first rapp generated by each safe multi-rule is reflected in the reported goals.
tests/golden/Nonterminal.lean:35:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/golden/Nonterminal.lean:34:21: error: unsolved goals
⊢ False
tests/golden/Nonterminal.lean:37:21: error: unsolved goals
⊢ MyFalse
tests/golden/Nonterminal.lean:40:21: error: unsolved goals
⊢ False
tests/golden/Nonterminal.lean:49:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/golden/Nonterminal.lean:49:2: warning: aesop: at least one safe multi-rule was applied. Only the first rapp generated by each safe multi-rule is reflected in the reported goals.
tests/golden/Nonterminal.lean:48:22: error: unsolved goals
case falso
⊢ False

case tt
⊢ MyTrue₁
